fixing horizontal scroll in publicaciones

--- a/src/routes/Publicaciones/Publicaciones.css
+++ b/src/routes/Publicaciones/Publicaciones.css
@@ -20,40 +20,39 @@
 .publicaciones__container {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 1fr 1fr;
-	gap: 20px;
 
 	h2 {
-		grid-column: 1/2;
 		text-align: left;
 		padding-left: 40px;
 		background-color: transparent;
 		color: var(--color-secondary);
 		border-radius: 10px;
-		height: 50px;
-	}
 
-	@media (min-width: 768px) {
-		display: grid;
+		@media (min-width: 512px) {
+			grid-column: 1/2;
+		}
+	}
+	@media (min-width: 512px) {
 		grid-template-columns: 1fr 1fr;
 		grid-template-rows: 1fr;
 	}
-	@media (min-width: 1024px) {
+
+	@media (min-width: 768px) {
 		grid-template-columns: 3fr 1fr;
 		grid-template-rows: 1fr;
 	}
-
-	
-
-
 }
 .publicaciones__sidebar {
-	grid-row: 1/3;
-	grid-column: 2/3;
+	/* box-sizing: border-box; */
+
+	@media (min-width: 512px) {
+		grid-row: 1/3;
+		grid-column: 2/3;
+	}
 	height: 100%;
 	/* background-color: var(--color-secondary); */
 	color: var(--color-white);
-	padding: 20px 20px 20px 20px;
+	padding: 15px 15px 15px 15px;
 	font-size: 0.5rem;
 	font-weight: bold;
 	/* border-top: 1px solid gray; */
